--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "@tanstack/vue-query": "^5.87.4",
+    "axios": "^1.12.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
