--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.8",
     "vuetify": "^3.10.0"
   },
   "devDependencies": {
