--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "cypress": "^14.5.3",
-    "eslint": "^9.31.0",
+    "eslint": "^9.36.0",
     "eslint-plugin-cypress": "^5.1.0",
     "eslint-plugin-oxlint": "~1.8.0",
     "eslint-plugin-vue": "~10.3.0",
@@ -49,6 +49,7 @@
     "prettier": "3.6.2",
     "start-server-and-test": "^2.0.12",
     "vite": "npm:rolldown-vite@latest",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
